--- a/Data Analysis/Talleres/Taller-2_analisis-univariado.ipynb
+++ b/Data Analysis/Talleres/Taller-2_analisis-univariado.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6c22e686",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/climate_change.csv')\n",
+    "df = pd.read_csv('../data/climate_change.csv')\n",
     "df"
    ]
   },
