Added team member information and dataset link to the climate change analysis notebook for better context and resource accessibility.

--- a/Data Analysis/Talleres/Taller_completo.ipynb
+++ b/Data Analysis/Talleres/Taller_completo.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "024e628d",
+   "metadata": {},
+   "source": [
+    "# Integrantes\n",
+    "**Juan José Aguado, Juan David Cruz, Mike Martínez y Juan Diego Ramírez**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "88a53dea",
    "metadata": {},
    "source": [
@@ -28,6 +37,14 @@
    "metadata": {},
    "source": [
     "# 1. Pregunta SMART y contexto\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca5bdec",
+   "metadata": {},
+   "source": [
+    "Link al dataset: https://www.kaggle.com/datasets/econdata/climate-change"
    ]
   },
   {
