Adjust of the text with interpretation of results

--- a/Data Analysis/Talleres/Taller_completo.ipynb
+++ b/Data Analysis/Talleres/Taller_completo.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "7dce1c9d",
       "metadata": {
         "id": "7dce1c9d"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "930c3be6",
       "metadata": {
         "colab": {
@@ -1037,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "9d24a44a",
       "metadata": {
         "id": "9d24a44a",
@@ -1108,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "68dd2545",
       "metadata": {
         "id": "68dd2545",
@@ -1157,7 +1157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "97f142b1",
       "metadata": {
         "id": "97f142b1",
@@ -1214,7 +1214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "0b4b5dfa",
       "metadata": {
         "id": "0b4b5dfa",
@@ -1302,9 +1302,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En esta sección, realizaremos los pasos fundamentales para preparar nuestro conjunto de datos antes de entrenar un modelo de regresión. Primero, separaremos nuestras variables en dos grupos: las variables predictoras, que incluyen todos los factores como CO2, CH4 y TSI, y nuestra variable objetivo (y), que es la Temp. A continuación, dividiremos estos datos en un conjunto de entrenamiento y un conjunto de prueba.\n",
-        "\n",
-        "Al observar nuestros datos, notamos que variables como CH4 (con valores superiores a 1600) y Aerosols (con valores cercanos a 0) operan en escalas muy diferentes. Para evitar que el modelo asigne una importancia indebida a las variables con magnitudes más grandes, aplicaremos un escalador (como StandardScaler) a nuestras variables predictoras. Este proceso estandarizará cada característica para que tengan una media de 0 y una desviación estándar de 1. Una vez completados estos pasos, nuestros datos estarán limpios, estructurados y normalizados, listos para ser utilizados en el ajuste del modelo de regresión en la siguiente sección."
+        "La preparación de los datos se ejecuta de la siguiente manera. Se separan las variables en dos grupos: las variables predictoras y la variable objetivo (y), que es la Temp. Se dividen los datos en un conjunto de entrenamiento y un conjunto de prueba. A continuación se estandarizan los datos para evitar los problemas generados por las diferencias en las magnitudes con las que se mide cada variable.\n"
       ],
       "metadata": {
         "id": "Ud2PtwrWPf0O"
@@ -1322,7 +1320,7 @@
         "id": "rM-_GJwnO_Vz"
       },
       "id": "rM-_GJwnO_Vz",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1335,7 +1333,7 @@
         "id": "ppLu8d1vQMWi"
       },
       "id": "ppLu8d1vQMWi",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1355,7 +1353,7 @@
         "id": "UTVKFw17PudH"
       },
       "id": "UTVKFw17PudH",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1371,9 +1369,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Una vez que nuestros datos han sido preparados, el siguiente paso es construir un modelo de regresión para cuantificar la relación entre los factores climáticos y la anomalía de la temperatura global. Como punto de partida, utilizaremos un modelo de Regresión Lineal Múltiple. Este modelo es ideal para empezar, ya que es interpretable y nos permitirá estimar cómo un cambio en cada variable predictora (como el CO₂) impacta directamente en la variable Temp.\n",
-        "\n",
-        "Para evaluar su rendimiento calcularemos dos métricas clave: el Coeficiente de Determinación (R²), que nos indicará la proporción de la variabilidad en la temperatura que es explicada por nuestro modelo, y el Error Cuadrático Medio (MSE), que medirá el error promedio de nuestras predicciones."
+        "Se plantea un modelo de regresión lineal para cuantificar la relación entre los factores climáticos y la temperatura global. Se utiliza un modelo de Regresión Lineal Múltiple.\n",
+        "\n"
       ],
       "metadata": {
         "id": "gqBWwTQxRsXZ"
@@ -1416,7 +1413,7 @@
         "outputId": "f9b7a364-926e-4e6b-fae4-78ed000074cc"
       },
       "id": "iqBSSAn5Rry_",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1503,7 +1500,7 @@
         "outputId": "6a85a051-51bb-4f49-a0eb-864a935d8cab"
       },
       "id": "7WJ0-qTdSbka",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1533,16 +1530,9 @@
       "source": [
         "###Resultados modelo\n",
         "\n",
-        "**Rendimiento similar:** El R² del modelo Ridge (0.6936) es casi idéntico al de la regresión lineal (0.6979).\n",
+        "El R² del modelo Ridge (0.6936) es casi idéntico al de la regresión lineal (0.6979). Para el caso de  las variables CFC-12 y CFC-11, el modelo lineal les dio coeficientes muy grandes (0.247 y -0.145). Ridge los ha reducito significativamente (a 0.159 y -0.094). Esto sugiere que la alta correlación entre ellos y otros predictores podría haber \"inflado\" su importancia en el primer modelo.\n",
         "\n",
-        "**Reducción de Coeficientes Extremos:** Para el caso de CFC-12 y CFC-11, el modelo lineal les dio coeficientes muy grandes (0.247 y -0.145). Ridge los ha reducito significativamente (a 0.159 y -0.094). Esto sugiere que la alta correlación entre ellos y otros predictores podría haber \"inflado\" su importancia en el primer modelo.\n",
-        "\n",
-        "**Estabilidad de Predictores Clave:** MEI y CO2 mantienen coeficientes positivos y relativamente estables, aunque el de CO2 también se reduce un poco. Esto refuerza su papel como predictores importantes y confiables.\n",
-        "\n",
-        "**Cambio en N2O:** El coeficiente de N2O pasó de ser fuertemente negativo (-0.085663) a ser mucho más cercano a cero (-0.029970). Ridge sugiere que la influencia negativa de esta variable probablemente se debía a la multicolinealidad, y no es un predictor tan fuerte como parecía.\n",
-        "\n",
-        "**Conclusión clave de Ridge:**\n",
-        "La regularización de Ridge nos da una imagen más conservadora y probablemente más precisa de la importancia de las variables. CFC-12, MEI y CO2 se confirman como los factores con una influencia positiva más robusta sobre la temperatura. Por otro lado, la importancia de CFC-11 y N2O parece ser menor de lo que el modelo lineal inicial sugería."
+        "MEI y CO2 mantienen coeficientes positivos y relativamente estables, El coeficiente de N2O pasó de ser fuertemente negativo (-0.085663) a ser mucho más cercano a cero (-0.029970). Ridge sugiere que la influencia negativa de esta variable probablemente se debía a la multicolinealidad, y no es un predictor tan fuerte como parecía."
       ],
       "metadata": {
         "id": "UAK61SpOTe6I"
@@ -1554,9 +1544,9 @@
       "source": [
         "### Conclusiones Modelo\n",
         "\n",
-        "Para abordar la pregunta sobre qué variables afectan la temperatura global y cómo el machine learning puede predecirlas, el modelo de regresión lineal múltiple con regularización Ridge ofrece una respuesta cuantitativa y jerarquizada. Su principal utilidad radica en la capacidad de ir más allá de la simple correlación para estimar la magnitud del impacto de cada predictor mediante el análisis de sus coeficientes. El análisis identificó a los gases de efecto invernadero, específicamente CO2 y CFC-12, como las variables con la influencia positiva más significativa y estadísticamente robusta. En cuanto a la predicción, el modelo demostró una capacidad considerable al explicar aproximadamente el 70% de la varianza en la temperatura (R² ≈ 0.70), estableciendo así una función matemática validada que puede ser utilizada para estimar futuras anomalías térmicas a partir de un conjunto de concentraciones atmosféricas conocidas.\n",
+        "El modelo de regresión lineal múltiple con regularización Ridge ejecutado ofrece una visión respaldada de las variables que más afectan la temperatura global. Su principal utilidad radica en la capacidad de ir más allá de la simple correlación para estimar la magnitud del impacto de cada predictor mediante el análisis de sus coeficientes. El análisis identificó a los gases de efecto invernadero, específicamente CO2 y CFC-12, como las variables con la influencia positiva más significativa y estadísticamente robusta. En cuanto a la predicción, el modelo demostró una capacidad considerable con un R² ≈ 0.70.\n",
         "\n",
-        "La utilidad predictiva del modelo es la base para abordar la \"prevención\", entendida como la mitigación informada de los factores de riesgo. El modelo funciona como un simulador de escenarios simplificado: permite evaluar el impacto potencial de diferentes políticas de emisión. Por ejemplo, se puede proyectar cómo cambiaría la predicción de la temperatura si se redujeran las concentraciones de CO2 o CFC-12 en un porcentaje determinado. Este enfoque basado en datos es fundamental para una toma de decisiones informada, ya que permite a los responsables de políticas públicas priorizar las intervenciones sobre los gases con mayor coeficiente de regresión (mayor impacto). Por lo tanto, el modelo no solo responde \"qué\" variables son importantes, sino que también proporciona una herramienta para evaluar \"cómo\" las acciones sobre estas variables podrían mitigar el calentamiento futuro, demostrando así el valor del machine learning como un pilar para la estrategia climática."
+        "La utilidad predictiva del modelo es la base para abordar la \"prevención\", entendida como la mitigación informada de los factores de riesgo. El modelo funciona como un simulador de escenarios simplificado: permite evaluar el impacto potencial de diferentes políticas de emisión. Por ejemplo, se puede proyectar cómo cambiaría la predicción de la temperatura si se redujeran las concentraciones de CO2 o CFC-12 en un porcentaje determinado. Este enfoque basado en datos es fundamental para una toma de decisiones informada, ya que permite a los responsables de políticas públicas priorizar las intervenciones sobre los gases con mayor impacto. Por lo tanto, el modelo no solo responde \"qué\" variables son importantes, sino que también proporciona una herramienta para evaluar \"cómo\" las acciones sobre estas variables podrían mitigar el calentamiento futuro."
       ],
       "metadata": {
         "id": "Nj9037bkV6v7"
