--- a/Data Analysis/Talleres/Taller-2_analisis-univariado.ipynb
+++ b/Data Analysis/Talleres/Taller-2_analisis-univariado.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "69ea2d5d",
+   "metadata": {},
+   "source": [
+    "# Integrantes\n",
+    "**Juan José Aguado, Juan David Cruz, Mike Martínez y Juan Diego Ramírez**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a7e7e918",
    "metadata": {},
    "source": [
@@ -1659,7 +1668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
