--- a/Data Analysis/Talleres/Taller-3_analisis-bivariado.ipynb
+++ b/Data Analysis/Talleres/Taller-3_analisis-bivariado.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1b1bdcba",
+   "metadata": {},
+   "source": [
+    "# Integrantes\n",
+    "**Juan José Aguado, Juan David Cruz, Mike Martínez y Juan Diego Ramírez**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5940e01",
    "metadata": {},
    "source": [
